...
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
...

                <ImageView
                    android:id="@+id/check_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
...

        <LinearLayout
            android:id="@+id/image_slider_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
                android:src="@drawable/remove_image_icon" />
            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/image_slider"
                android:layout_width="match_parent"
                android:layout_height="150dp"
...
                android:padding="14dp">
                <androidx.cardview.widget.CardView
                    android:id="@+id/open_gallery_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                android:padding="14dp">
                <androidx.cardview.widget.CardView
                    android:id="@+id/open_camera_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/item_name_field"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
...
                    android:background="@drawable/rounded_border">
                    <EditText
                        android:id="@+id/serial_number_field"
                        android:layout_width="0dp"
                        android:layout_weight="3"
...
            android:gravity="center">
            <com.example.sweethome.CustomAddTagsField
                android:id="@+id/tag_input"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="15dp"
...
            android:gravity="center">
            <EditText
                android:id="@+id/description_field"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
...

                <EditText
                    android:id="@+id/make_field"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
...
                    android:background="@drawable/rounded_border">
                    <EditText
                        android:id="@+id/model_field"
                        android:hint="e.g. pixel 8 pro"
                        android:layout_width="match_parent"
...

                <TextView
                    android:id="@+id/date_field"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
...
                    android:background="@drawable/rounded_border">
                    <EditText
                        android:id="@+id/value_field"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
...
            android:gravity="center">
            <EditText
                android:id="@+id/comment_field"
                android:layout_width="match_parent"
                android:layout_height="100dp"
...
